terraform/kubernetes-config/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: web-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: web-service
      app.kubernetes.io/part-of: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-service
        app.kubernetes.io/part-of: app
    spec:
      containers:
        - name: web
          image: nginx:1.25
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: web-service
spec:
  selector:
    app.kubernetes.io/name: web-service
    app.kubernetes.io/part-of: web-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
