terraform/kubernetes-config/ingress.yaml
# Create a namespace
apiVersion: v1
kind: Namespace
metadata:
  name: app
---
# Set up Traefik routers and services
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: clusterissuer
spec:
  rules:
    - host: web-k8s.prototyping.quest
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
  tls:
    - secretName: web-service-cert
      hosts:
        - web-k8s.prototyping.quest
